--- a/ecommerce-next/package.json
+++ b/ecommerce-next/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
