--- a/ecommerce-next/package.json
+++ b/ecommerce-next/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@types/react": "^17.0.2",
+    "deepmerge": "^4.2.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "^4.3.2"
