--- a/ecommerce-next/package.json
+++ b/ecommerce-next/package.json
@@ -20,6 +20,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "prettier": "^2.6.2",
     "typescript": "^4.3.2"
   }
 }
