--- a/ecommerce-next/package.json
+++ b/ecommerce-next/package.json
@@ -20,7 +20,9 @@
     "deepmerge": "^4.2.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.3.2"
   }
 }
