--- a/ecommerce-next/package.json
+++ b/ecommerce-next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "postcss assets/main.css -o assets/main_browser.css"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -17,10 +18,12 @@
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@types/react": "^17.0.2",
+    "autoprefixer": "^10.4.7",
     "deepmerge": "^4.2.2",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.13",
+    "postcss-cli": "^9.1.0",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.3.2"
