--- a/ecommerce-next/package.json
+++ b/ecommerce-next/package.json
@@ -11,21 +11,27 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "body-scroll-lock": "^3.1.5",
+    "classnames": "^2.3.1",
+    "js-cookie": "^2.2.1",
+    "keen-slider": "^5.5.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-ticker": "^1.2.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@types/node": "^17.0.25",
-    "@types/react": "^17.0.2",
-    "autoprefixer": "^10.4.7",
+    "@types/body-scroll-lock": "^2.6.1",
+    "@types/js-cookie": "^2.2.6",
+    "@types/react": "^17.0.9",
+    "autoprefixer": "^10.2.6",
     "deepmerge": "^4.2.2",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.13",
-    "postcss-cli": "^9.1.0",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "postcss-nesting": "^8.0.1",
+    "prettier": "^2.3.1",
+    "tailwindcss": "^2.1.4",
     "typescript": "^4.3.2"
   }
 }
